[package]
name = "claude-dialog"
version = "0.1.0"
readme = "README.md"
edition = "2024"
authors = ["Katsuhiro Honda<freewave3@gmail.com>"]
description = "Interactive CLI for Claude conversations with custom system prompts"
license = "MIT"
repository = "https://github.com/katsuhirohonda/claude-dialog"
keywords = ["claude", "ai", "cli", "dialog", "interactive"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.13"
mockall = "0.13"
assert_cmd = "2.0"
predicates = "3.1"
